Finalna aktualizacja - Panel administratora

--- a/KinoProjekt/KinoProjekt.csproj
+++ b/KinoProjekt/KinoProjekt.csproj
@@ -217,10 +217,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\Themes\Generic.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="RegisterWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -291,6 +287,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Pages\profile.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pages\bg.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
